[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Meshlibs/kenneytd.old.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://Scenes/Enemies/UfoP.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Levels/Level0.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.541176, 0.121569, 0.027451, 1 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )
size = Vector2( 100, 100 )
center_offset = Vector3( 50, 50, 0 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 98, 98 )
center_offset = Vector3( 50, 50, 1 )

[sub_resource type="NavigationMesh" id=4]
vertices = PoolVector3Array( 1.25, 0.5, -13.5, 1.75, 0.5, -13.5, 2, 0.5, -14.25, 1.25, 0.5, -15.75, 7, 0.5, -13.25, 8, 0.5, -13.25, 9.75, 0.5, -15.75, 1.25, 0.5, -15.75, 3, 0.5, -14.25, 8, 0.5, -13.25, 8.25, 0.5, -12.5, 9.75, 0.5, -12.5, 9.75, 0.5, -15.75, 1.25, 0.5, -15.75, 2, 0.5, -14.25, 3, 0.5, -14.25, 3.25, 0.5, -13.75, 6.75, 0.5, -12.75, 7, 0.5, -13.25, 3, 0.5, -14.25, 9, 0.5, -9.25, 9.25, 0.5, -9, 9.75, 0.5, -9, 8.75, 0.5, -10, 2, 0.5, -12.75, 1.75, 0.5, -13.5, 1.25, 0.5, -13.5, 1.25, 0.5, -11, 2, 0.5, -9.25, 2.25, 0.5, -10.25, 1.25, 0.5, -10, 1.25, 0.5, -6.5, 1.75, 0.5, -6.5, 2, 0.5, -7.25, 2, 0.5, -9.25, 1.25, 0.5, -10, 3.25, 0.5, -7, 4, 0.5, -7.5, 4.25, 0.5, -8, 2.75, 0.5, -9, 2, 0.5, -9.25, 2, 0.5, -7.25, 7, 0.5, -11.75, 6.75, 0.5, -12.75, 3.25, 0.5, -13.75, 3, 0.5, -10.75, 4.25, 0.5, -8, 7.5, 0.5, -8, 8.25, 0.5, -10, 8.75, 0.5, -10, 8, 0.5, -11.75, 9.75, 0.5, -12.5, 8.25, 0.5, -12.5, 8, 0.5, -11.75, 8.75, 0.5, -10, 9.75, 0.5, -9, 7.5, 0.5, -8, 8, 0.5, -9.25, 8.25, 0.5, -10, 8, 0.5, -11.75, 7, 0.5, -11.75, 2, 0.5, -12.75, 1.25, 0.5, -11, 3, 0.5, -10.75, 3, 0.5, -12.75, 3.25, 0.5, -13.75, 3, 0.5, -12.75, 3, 0.5, -10.75, 3, 0.5, -10.75, 2.75, 0.5, -9, 4.25, 0.5, -8, 5.75, 0.5, -4, 6.5, 0.5, -4.25, 6.5, 0.5, -4.5, 5.75, 0.5, -4.75, 2.75, 0.5, -2.75, 3.25, 0.5, -1, 4, 0.5, -1, 5.75, 0.5, -3, 5.75, 0.5, -4, 3, 0.5, -3.75, 4.25, 0.5, -7, 4, 0.5, -7.5, 3.25, 0.5, -7, 3, 0.5, -5.75, 9, 0.5, -8.25, 9.25, 0.5, -9, 9, 0.5, -9.25, 8, 0.5, -9.25, 7.5, 0.5, -8, 8, 0.5, -7.75, 2, 0.5, -5.75, 1.75, 0.5, -6.5, 1.25, 0.5, -6.5, 1.25, 0.5, -0.25, 1.75, 0.5, -1, 2.25, 0.5, -4, 7.25, 0.5, -6.25, 7.5, 0.5, -5.5, 8, 0.5, -5.5, 8.75, 0.5, -6, 7.75, 0.5, -7, 9, 0.5, -5.25, 8.5, 0.5, -5, 9.75, 0.5, -4.5, 8.25, 0.5, -2, 8, 0.5, -2.5, 7.25, 0.5, -3, 3, 0.5, -5.75, 2.25, 0.5, -4, 3, 0.5, -3.75, 5.75, 0.5, -4, 5.75, 0.5, -4.75, 4.25, 0.5, -7, 3, 0.5, -0.25, 3, 0.5, -0.75, 1.75, 0.5, -1, 1.25, 0.5, -0.25, 8.25, 0.5, -2, 7.25, 0.5, -3, 5.75, 0.5, -3, 4, 0.5, -1, 4, 0.5, -0.25, 9.75, 0.5, -0.25, 5.75, 0.5, -6, 7.25, 0.5, -6.25, 7.75, 0.5, -7, 4.25, 0.5, -7, 5.75, 0.5, -4.75, 5.75, 0.5, -6, 4.25, 0.5, -7, 8.75, 0.5, -6, 8, 0.5, -7.75, 7.75, 0.5, -7, 9.75, 0.5, -2.5, 9, 0.5, -2.5, 8.25, 0.5, -2, 9.75, 0.5, -0.25, 3, 0.5, -5.75, 2, 0.5, -5.75, 2.25, 0.5, -4, 9.75, 0.5, -8, 9, 0.5, -8.25, 8, 0.5, -7.75, 8.75, 0.5, -6, 9.75, 0.5, -4.5, 8.75, 0.5, -6, 9, 0.5, -5.25, 9.75, 0.5, -4.5, 12.25, 0.5, -6.75, 12.25, 0.5, -6.25, 13.75, 0.5, -6.25, 13.75, 0.5, -6.75, 7, 0.5, -4.5, 6.5, 0.5, -4.5, 6.5, 0.5, -4.25, 7.25, 0.5, -4, 8.25, 0.5, -3, 9, 0.5, -2.5, 9.75, 0.5, -2.5, 9.75, 0.5, -4.5, 8.5, 0.5, -5, 7.25, 0.5, -4, 7.25, 0.5, -3, 8, 0.5, -2.5, 8.25, 0.5, -3, 7.25, 0.5, -4, 8.5, 0.5, -5, 8, 0.5, -5.5, 7.5, 0.5, -5.5, 7, 0.5, -4.5, 7.25, 0.5, -4, 15.25, 0.75, -4.75, 15.25, 0.75, -3.25, 15.75, 0.75, -3.25, 15.75, 0.75, -4.75 )
polygons = [ PoolIntArray( 1, 0, 2 ), PoolIntArray( 2, 0, 3 ), PoolIntArray( 5, 4, 6 ), PoolIntArray( 6, 4, 8 ), PoolIntArray( 6, 8, 7 ), PoolIntArray( 10, 9, 11 ), PoolIntArray( 11, 9, 12 ), PoolIntArray( 15, 14, 13 ), PoolIntArray( 17, 16, 18 ), PoolIntArray( 18, 16, 19 ), PoolIntArray( 21, 20, 22 ), PoolIntArray( 22, 20, 23 ), PoolIntArray( 25, 24, 26 ), PoolIntArray( 26, 24, 27 ), PoolIntArray( 30, 29, 28 ), PoolIntArray( 32, 31, 33 ), PoolIntArray( 33, 31, 34 ), PoolIntArray( 34, 31, 35 ), PoolIntArray( 37, 36, 38 ), PoolIntArray( 38, 36, 41 ), PoolIntArray( 38, 41, 39 ), PoolIntArray( 39, 41, 40 ), PoolIntArray( 43, 42, 44 ), PoolIntArray( 44, 42, 45 ), PoolIntArray( 45, 42, 46 ), PoolIntArray( 46, 42, 47 ), PoolIntArray( 50, 49, 48 ), PoolIntArray( 52, 51, 53 ), PoolIntArray( 53, 51, 54 ), PoolIntArray( 54, 51, 55 ), PoolIntArray( 57, 56, 58 ), PoolIntArray( 58, 56, 59 ), PoolIntArray( 59, 56, 60 ), PoolIntArray( 64, 63, 61 ), PoolIntArray( 61, 63, 62 ), PoolIntArray( 65, 67, 66 ), PoolIntArray( 70, 69, 68 ), PoolIntArray( 72, 71, 73 ), PoolIntArray( 73, 71, 74 ), PoolIntArray( 76, 75, 77 ), PoolIntArray( 77, 75, 80 ), PoolIntArray( 77, 80, 78 ), PoolIntArray( 78, 80, 79 ), PoolIntArray( 82, 81, 83 ), PoolIntArray( 83, 81, 84 ), PoolIntArray( 86, 85, 87 ), PoolIntArray( 87, 85, 88 ), PoolIntArray( 88, 85, 90 ), PoolIntArray( 88, 90, 89 ), PoolIntArray( 92, 91, 93 ), PoolIntArray( 93, 91, 96 ), PoolIntArray( 93, 96, 95 ), PoolIntArray( 93, 95, 94 ), PoolIntArray( 98, 97, 99 ), PoolIntArray( 99, 97, 101 ), PoolIntArray( 99, 101, 100 ), PoolIntArray( 102, 104, 103 ), PoolIntArray( 107, 106, 105 ), PoolIntArray( 109, 108, 110 ), PoolIntArray( 110, 108, 113 ), PoolIntArray( 110, 113, 112 ), PoolIntArray( 110, 112, 111 ), PoolIntArray( 115, 114, 116 ), PoolIntArray( 116, 114, 117 ), PoolIntArray( 119, 118, 120 ), PoolIntArray( 120, 118, 121 ), PoolIntArray( 121, 118, 122 ), PoolIntArray( 122, 118, 123 ), PoolIntArray( 125, 124, 126 ), PoolIntArray( 126, 124, 127 ), PoolIntArray( 130, 129, 128 ), PoolIntArray( 131, 133, 132 ), PoolIntArray( 135, 134, 136 ), PoolIntArray( 136, 134, 137 ), PoolIntArray( 140, 139, 138 ), PoolIntArray( 142, 141, 143 ), PoolIntArray( 143, 141, 144 ), PoolIntArray( 144, 141, 145 ), PoolIntArray( 148, 147, 146 ), PoolIntArray( 152, 151, 149 ), PoolIntArray( 149, 151, 150 ), PoolIntArray( 154, 153, 155 ), PoolIntArray( 155, 153, 156 ), PoolIntArray( 158, 157, 159 ), PoolIntArray( 159, 157, 160 ), PoolIntArray( 160, 157, 161 ), PoolIntArray( 161, 157, 162 ), PoolIntArray( 164, 163, 165 ), PoolIntArray( 165, 163, 166 ), PoolIntArray( 168, 167, 169 ), PoolIntArray( 169, 167, 170 ), PoolIntArray( 170, 167, 171 ), PoolIntArray( 175, 174, 172 ), PoolIntArray( 172, 174, 173 ) ]
agent_radius = 0.25
agent_max_climb = 0.1

[sub_resource type="BoxShape" id=5]
extents = Vector3( 20, 0.19, 20 )

[node name="Level" type="Spatial"]
script = ExtResource( 4 )

[node name="Border" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.00287983, 1, 0, -1, 0.00287983, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.00287983, 1, 0, -1, 0.00287983, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("")

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 4 )

[node name="GridMap" type="GridMap" parent="Navigation/NavigationMeshInstance"]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 1, 0.2, 1 )
cell_center_y = false
bake_navigation = true
data = {
"cells": PoolIntArray( 0, 65519, 56, 1, 65519, 56, 2, 65519, 56, 3, 65519, 56, 4, 65519, 56, 5, 65519, 56, 6, 65519, 56, 7, 65519, 56, 8, 65519, 56, 9, 65519, 56, 10, 65519, 56, 0, 65520, 56, 1, 65520, 655384, 2, 65520, 655384, 3, 65520, 655384, 4, 65520, 655384, 5, 65520, 655384, 6, 65520, 655384, 7, 65520, 655384, 8, 65520, 655384, 9, 65520, 655384, 10, 65520, 56, 0, 65521, 97, 1, 65521, 655423, 2, 65521, 655423, 3, 65521, 655423, 4, 65521, 655423, 5, 65521, 655423, 6, 65521, 63, 7, 65521, 63, 8, 65521, 63, 9, 65521, 63, 10, 65521, 97, 0, 65522, 97, 1, 65522, 655423, 2, 65522, 86, 3, 65522, 655423, 4, 65522, 655423, 5, 65522, 655423, 6, 65522, 63, 7, 65522, 63, 8, 65522, 63, 9, 65522, 63, 10, 65522, 97, 0, 65523, 97, 1, 65523, 655423, 2, 65523, 655423, 3, 65523, 655423, 4, 65523, 655423, 5, 65523, 655423, 6, 65523, 63, 7, 65523, 86, 8, 65523, 63, 9, 65523, 63, 10, 65523, 97, 0, 65524, 97, 1, 65524, 655423, 2, 65524, 655423, 3, 65524, 655423, 4, 65524, 655423, 5, 65524, 655423, 6, 65524, 63, 7, 65524, 63, 8, 65524, 63, 9, 65524, 63, 10, 65524, 97, 0, 65525, 97, 1, 65525, 655423, 2, 65525, 655423, 3, 65525, 655423, 4, 65525, 655423, 5, 65525, 655423, 6, 65525, 63, 7, 65525, 63, 8, 65525, 63, 9, 65525, 63, 10, 65525, 97, 65537, 65525, 6, 65538, 65525, 7, 0, 65526, 97, 1, 65526, 655423, 2, 65526, 655423, 3, 65526, 655423, 4, 65526, 655423, 5, 65526, 655423, 6, 65526, 63, 7, 65526, 63, 8, 65526, 63, 9, 65526, 63, 10, 65526, 97, 65538, 65526, 6, 65544, 65526, 6, 0, 65527, 97, 1, 65527, 655423, 2, 65527, 655423, 3, 65527, 655423, 4, 65527, 655423, 5, 65527, 655423, 6, 65527, 63, 7, 65527, 63, 8, 65527, 63, 9, 65527, 63, 10, 65527, 97, 65545, 65527, 7, 0, 65528, 97, 1, 65528, 655423, 2, 65528, 655423, 3, 65528, 655423, 4, 65528, 655423, 5, 65528, 655423, 6, 65528, 63, 7, 65528, 63, 8, 65528, 63, 9, 65528, 63, 10, 65528, 97, 65540, 65528, 7, 65541, 65528, 7, 65542, 65528, 7, 65543, 65528, 7, 0, 65529, 97, 1, 65529, 655423, 2, 65529, 86, 3, 65529, 655423, 4, 65529, 655423, 5, 65529, 655423, 6, 65529, 63, 7, 65529, 63, 8, 65529, 63, 9, 65529, 63, 10, 65529, 97, 12, 65529, 24, 13, 65529, 24, 0, 65530, 97, 1, 65530, 655423, 2, 65530, 655423, 3, 65530, 63, 4, 65530, 655423, 5, 65530, 1441855, 6, 65530, 134, 7, 65530, 63, 8, 65530, 63, 9, 65530, 63, 10, 65530, 97, 65544, 65530, 6, 0, 65531, 97, 1, 65531, 655423, 2, 65531, 655423, 3, 65531, 655423, 4, 65531, 1441855, 5, 65531, 1441855, 6, 65531, 63, 7, 65531, 63, 8, 65531, 63, 9, 65531, 63, 10, 65531, 97, 12, 65531, 24, 13, 65531, 24, 65548, 65531, 1, 65549, 65531, 1, 65551, 65531, 24, 0, 65532, 97, 1, 65532, 655423, 2, 65532, 655423, 3, 65532, 1441855, 4, 65532, 63, 5, 65532, 1441855, 6, 65532, 86, 7, 65532, 63, 8, 65532, 63, 9, 65532, 63, 10, 65532, 97, 65538, 65532, 7, 65551, 65532, 24, 0, 65533, 97, 1, 65533, 1441855, 2, 65533, 1441855, 3, 65533, 1441855, 4, 65533, 1441855, 5, 65533, 1441855, 6, 65533, 63, 7, 65533, 63, 8, 65533, 63, 9, 65533, 63, 10, 65533, 97, 12, 65533, 5, 13, 65533, 5, 65538, 65533, 6, 65544, 65533, 7, 0, 65534, 97, 1, 65534, 1441855, 2, 65534, 71, 3, 65534, 1441855, 4, 65534, 1441855, 5, 65534, 1441855, 6, 65534, 1441855, 7, 65534, 1441855, 8, 65534, 1441855, 9, 65534, 1441855, 10, 65534, 97, 0, 65535, 97, 1, 65535, 63, 2, 65535, 63, 3, 65535, 1441855, 4, 65535, 1441855, 5, 65535, 63, 6, 65535, 1441855, 7, 65535, 1048649, 8, 65535, 1441855, 9, 65535, 1441855, 10, 65535, 97, 65539, 65535, 655364 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="TowerContainer" type="Spatial" parent="Navigation/NavigationMeshInstance"]

[node name="EnemieContainer" type="Spatial" parent="Navigation"]

[node name="Enemie" parent="Navigation/EnemieContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.39088, 0.5, -10.2405 )
alvoPath = NodePath("../../../Target")

[node name="Enemie2" parent="Navigation/EnemieContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.27185, 1, -7.60604 )
alvoPath = NodePath("../../../Target")

[node name="Enemie3" parent="Navigation/EnemieContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.58739, 2.91594, -15.5 )
alvoPath = NodePath("../../../Target")

[node name="Enemie4" parent="Navigation/EnemieContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.84964, 0.784, -12.2526 )
alvoPath = NodePath("../../../Target")

[node name="Enemie5" parent="Navigation/EnemieContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.37262, 1.568, -15.5 )
alvoPath = NodePath("../../../Target")

[node name="Enemie6" parent="Navigation/EnemieContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.70172, 2.352, -15.5 )
alvoPath = NodePath("../../../Target")

[node name="Enemie7" parent="Navigation/EnemieContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.78176, 1, -5.41796 )
alvoPath = NodePath("../../../Target")

[node name="Target" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.37755, 0.25, -0.611699 )

[node name="MapColider" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="MapColider"]
shape = SubResource( 5 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MobTimer" type="Timer" parent="."]

[node name="MatchTimer" type="Timer" parent="."]

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="bake_finished" from="Navigation/NavigationMeshInstance" to="." method="_on_NavigationMeshInstance_bake_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
